@@ -48,17 +48,15 @@ public class HashMapEdges<I extends WritableComparable, E extends Writable>
 
   @Override
   public void initialize(Iterable<Edge<I, E>> edges) {
-    if (edges != null) {
-      // If the iterable is actually a collection, we can cheaply get the
-      // size and initialize the hash-map with the expected capacity.
-      if (edges instanceof Collection) {
-        initialize(((Collection<Edge<I, E>>) edges).size());
-      } else {
-        initialize();
-      }
-      for (Edge<I, E> edge : edges) {
-        add(edge);
-      }
+    // If the iterable is actually a collection, we can cheaply get the
+    // size and initialize the hash-map with the expected capacity.
+    if (edges instanceof Collection) {
+      initialize(((Collection<Edge<I, E>>) edges).size());
+    } else {
+      initialize();
+    }
+    for (Edge<I, E> edge : edges) {
+      add(edge);
     }
   }
 
