@@ -49,19 +49,17 @@ public class LongDoubleArrayEdges
 
   @Override
   public void initialize(Iterable<Edge<LongWritable, DoubleWritable>> edges) {
-    if (edges != null) {
-      // If the iterable is actually a collection, we can cheaply get the
-      // size and initialize the arrays with the expected capacity.
-      if (edges instanceof Collection) {
-        int numEdges =
-            ((Collection<Edge<LongWritable, DoubleWritable>>) edges).size();
-        initialize(numEdges);
-      } else {
-        initialize();
-      }
-      for (Edge<LongWritable, DoubleWritable> edge : edges) {
-        add(edge);
-      }
+    // If the iterable is actually a collection, we can cheaply get the
+    // size and initialize the arrays with the expected capacity.
+    if (edges instanceof Collection) {
+      int numEdges =
+          ((Collection<Edge<LongWritable, DoubleWritable>>) edges).size();
+      initialize(numEdges);
+    } else {
+      initialize();
+    }
+    for (Edge<LongWritable, DoubleWritable> edge : edges) {
+      add(edge);
     }
   }
 
