@@ -50,18 +50,16 @@ public class LongDoubleHashMapEdges
 
   @Override
   public void initialize(Iterable<Edge<LongWritable, DoubleWritable>> edges) {
-    if (edges != null) {
-      // If the iterable is actually a collection, we can cheaply get the
-      // size and initialize the hash-map with the expected capacity.
-      if (edges instanceof Collection) {
-        initialize(
-            ((Collection<Edge<LongWritable, DoubleWritable>>) edges).size());
-      } else {
-        initialize();
-      }
-      for (Edge<LongWritable, DoubleWritable> edge : edges) {
-        add(edge);
-      }
+    // If the iterable is actually a collection, we can cheaply get the
+    // size and initialize the hash-map with the expected capacity.
+    if (edges instanceof Collection) {
+      initialize(
+          ((Collection<Edge<LongWritable, DoubleWritable>>) edges).size());
+    } else {
+      initialize();
+    }
+    for (Edge<LongWritable, DoubleWritable> edge : edges) {
+      add(edge);
     }
   }
 
