@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-556: Race condition in EdgeStore (apresta)
+
   GIRAPH-528: Decouple vertex implementation from edge storage (apresta)
 
   GIRAPH-553: Cleanup HCatalogVertexOutputFormat (majakabiljo)
